# crypto-exchange

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/api/src/controller/: auth.rs
apps/api/src/dto/auth_dto/: mod.rs  request_input.rs  request_output.rs
apps/api/src/middlewares/: auth_middleware.rs
apps/api/src/routes/: auth.rs
apps/api/src/utils/: jwt.rs
